# blood-geometry

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: angle.rs  arc.rs  box2d.rs  color.rs  composite.rs  countour.rs  iter.rs  lib.rs  pair.rs  point.rs  rect.rs  region.rs  size.rs  trapezoid.rs  triangle.rs
src/bentley_ottman/: compare.rs  mod.rs
src/bentley_ottman/algorithm/: edge.rs  linked_list.rs  mod.rs  priority_queue.rs  sweep_line.rs  tests.rs
src/curve/: cubic.rs  mod.rs  quad.rs
src/line/: from_points.rs  mod.rs
src/path/: buffer.rs  flatten.rs  line_segments.rs  mod.rs  shape.rs
src/transform/: affine.rs  mod.rs  rotation.rs  scale.rs  transformable.rs  translation.rs
